# wondertrader_rs

./: Cargo.toml  LICENSE  README.md
apps/wt-backtest-cli/: Cargo.toml
apps/wt-backtest-cli/src/: main.rs
apps/wt-live-runner/: Cargo.toml
apps/wt-live-runner/src/: main.rs
apps/wt-md-recorder/: Cargo.toml
apps/wt-md-recorder/src/: main.rs
configs/: backtest.toml  live.dryrun.toml  md.toml
crates/wt-backtest/: Cargo.toml
crates/wt-backtest/src/: lib.rs
crates/wt-core/: Cargo.toml
crates/wt-core/src/: config.rs  error.rs  event.rs  lib.rs  logging.rs  market.rs  order.rs  time.rs  types.rs
crates/wt-engine/: Cargo.toml
crates/wt-engine/src/: lib.rs
crates/wt-execution/: Cargo.toml
crates/wt-execution/src/: lib.rs
crates/wt-market/: Cargo.toml
crates/wt-market/src/: lib.rs
crates/wt-report/: Cargo.toml
crates/wt-report/src/: lib.rs
crates/wt-storage/: Cargo.toml
crates/wt-storage/src/: lib.rs
