[package]
name = "wt-backtest-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wt-backtest = { path = "../../crates/wt-backtest" }
wt-core.workspace = true
wt-engine = { path = "../../crates/wt-engine" }
wt-report = { path = "../../crates/wt-report" }
