[package]
name = "wt-live-runner"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wt-core.workspace = true
wt-engine = { path = "../../crates/wt-engine" }
wt-execution = { path = "../../crates/wt-execution" }
wt-market = { path = "../../crates/wt-market" }
