[package]
name = "wt-md-recorder"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
wt-core.workspace = true
wt-market = { path = "../../crates/wt-market" }
wt-storage = { path = "../../crates/wt-storage" }
