[package]
name = "wt-backtest"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
rust_decimal.workspace = true
wt-core.workspace = true
wt-engine = { path = "../wt-engine" }
