[package]
name = "wt-report"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rust_decimal.workspace = true
serde.workspace = true
wt-backtest = { path = "../wt-backtest" }
wt-core.workspace = true
