[package]
name = "wt-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
polars.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
wt-core.workspace = true
